[package]
name = "femail"
version = "0.1.0"
edition = "2021"
description = "A FUSE filesystem for Gmail"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
base64 = "0.13"